--- a/07 - Array Cardio Day 2/index-START.html
+++ b/07 - Array Cardio Day 2/index-START.html
@@ -26,16 +26,55 @@
 
     // Some and Every Checks
     // Array.prototype.some() // is at least one person 19 or older?
+    const isAdult = people.some(function(person){
+      const currentYear = (new Date()).getFullYear();
+      if(currentYear-person.year >=19){
+        return true;
+      }
+    });
+    console.log(isAdult);
+    //Using shorthand
+    const isAdults = people.some(person => (new Date()).getFullYear-person.year >= 19);
+    console.log(isAdults);
+    
     // Array.prototype.every() // is everyone 19 or older?
+    const allAdult = people.every(function (person) {
+        const currentYear = (new Date()).getFullYear();
+        if (currentYear - person.year >= 19) {
+          return true;
+        }
+      });
+      console.log(allAdult);
 
     // Array.prototype.find()
     // Find is like filter, but instead returns just the one you are looking for
     // find the comment with the ID of 823423
+      const comment = comments.find(function(comment){
+        if(comment.id === 823423){
+          return true;
+        }
+      });
+      console.log(comment);
 
     // Array.prototype.findIndex()
     // Find the comment with this ID
     // delete the comment with the ID of 823423
-
+    const index = comments.findIndex(function (comment) {
+        if (comment.id === 823423) {
+          return true;
+        }
+      });
+      console.log(index);
+      //We can delete the element by using following method   
+      //comments.splice(index,1);
+      //console.table(comments);
+      //But a better way is to store the updated one in new array
+      const newComments = [
+        ...comments.slice(0,index),
+        ...comments.slice(index+1)
+      ]
+      //using spread element to take elements individually
+      console.table(newComments);
   </script>
 </body>
 </html>
